# QuantumTransportPP

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  params.ini
docs/html/: altermagnet_8hpp.html  altermagnet_8hpp.js  altermagnet_8hpp__incl.dot  altermagnet_8hpp_source.html  annotated.html  annotated_dup.js  bandstructure_8hpp.html  bandstructure_8hpp.js  bandstructure_8hpp__dep__incl.dot  bandstructure_8hpp__incl.dot  bandstructure_8hpp_source.html  boltzmann_8hpp.html  boltzmann_8hpp.js  boltzmann_8hpp__incl.dot  boltzmann_8hpp_source.html  class_altermagnet_model-members.html  class_altermagnet_model.html  class_altermagnet_model.js  class_altermagnet_model__coll__graph.dot  class_band_structure-members.html  class_band_structure.html  class_band_structure.js  class_band_structure__inherit__graph.dot  class_boltzmann_solver-members.html  class_boltzmann_solver.html  class_boltzmann_solver.js  class_boltzmann_solver__coll__graph.dot  class_d_o_s-members.html  class_d_o_s.html  class_d_o_s.js  class_d_o_s__coll__graph.dot  class_haldane_model-members.html  class_haldane_model.html  class_haldane_model.js  class_haldane_model__coll__graph.dot  class_hamiltonian-members.html  class_hamiltonian.html  class_hamiltonian.js  class_hamiltonian__inherit__graph.dot  class_kane_mele_model-members.html  (+56 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_6.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js
docs/latex/: altermagnet_8hpp.tex  altermagnet_8hpp__incl.dot  altermagnet_8hpp_source.tex  annotated.tex  bandstructure_8hpp.tex  bandstructure_8hpp__dep__incl.dot  bandstructure_8hpp__incl.dot  bandstructure_8hpp_source.tex  boltzmann_8hpp.tex  boltzmann_8hpp__incl.dot  boltzmann_8hpp_source.tex  class_altermagnet_model.tex  class_altermagnet_model__coll__graph.dot  class_band_structure.tex  class_band_structure__inherit__graph.dot  class_boltzmann_solver.tex  class_boltzmann_solver__coll__graph.dot  class_d_o_s.tex  class_d_o_s__coll__graph.dot  class_haldane_model.tex  class_haldane_model__coll__graph.dot  class_hamiltonian.tex  class_hamiltonian__inherit__graph.dot  class_kane_mele_model.tex  class_kane_mele_model__coll__graph.dot  class_kubo_solver.tex  class_kubo_solver__coll__graph.dot  class_mesh.tex  class_tight_binding_square.tex  class_tight_binding_square__coll__graph.dot  dos_8hpp_source.tex  files.tex  geometry_8hpp_source.tex  haldane_8hpp.tex  haldane_8hpp__incl.dot  haldane_8hpp_source.tex  hamiltonian_8cpp.tex  hamiltonian_8cpp__incl.dot  hamiltonian_8hpp.tex  hamiltonian_8hpp__dep__incl.dot  (+9 more)
examples/: altermagnet_berry.cpp  altermagnet_conductivity.cpp  altermagnet_conductivity_v2.cpp  run_all.cpp  transport_phi_haldane.cpp
include/: altermagnet.hpp  bandstructure.hpp  boltzmann.hpp  config_parser.hpp  dos.hpp  geometry.hpp  haldane.hpp  hamiltonian.hpp  kane_mele.hpp  kubo.hpp  logInfo.hpp  mesh.hpp  tightbinding_k.hpp
postprocessing/: plot_berry.ipynb  plot_conductivity.ipynb
src/: boltzmann.cpp  dos.cpp  hamiltonian.cpp  kubo.cpp  mesh.cpp
tests/: test_bandstructure.cpp  test_berry.cpp  test_boltzmann.cpp  test_dos.cpp  test_kubo.cpp  test_mesh.cpp
